Unify all product pages

--- a/storefront-site/html/confirmation.html
+++ b/storefront-site/html/confirmation.html
@@ -103,27 +103,27 @@
     <div class="outer-grid-product-listings">
         <h2>Recommended Products For You</h2>
         <div class="other-products">
-            <a href="./products/product4.html">
+            <a href="./products/product.html?id=4">
                 <div class="product-listing">
                     <img src="../images/product4.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./products/product5.html">
+            <a href="./products/product.html?id=5">
                 <div class="product-listing">
                     <img src="../images/product5.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./products/product6.html">
+            <a href="./products/product.html?id=6">
                 <div class="product-listing">
                     <img src="../images/product6.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./products/product7.html">
+            <a href="./products/product.html?id=7">
                 <div class="product-listing">
                     <img src="../images/product7.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./products/product10.html">
+            <a href="./products/product.html?id=10">
                 <div class="product-listing">
                     <img src="../images/product10.png" alt="Product Image">
                 </div>
