--- a/storefront-site/index.html
+++ b/storefront-site/index.html
@@ -56,127 +56,127 @@
         <div class="featured-product-container">
             <div class="featured-product-content">
                 <h2>Currently Popular</h2>
-                <a href="./html/products/product1.html">
+                <a href="./html/products/product.html?id=1">
                     <div class="featured-product">
                         <img src="./images/product1.png" alt="Currently Popular Product">
                     </div>
                 </a>
-                <span><a href="./html/products/product1.html">See More</a></span>
+                <span><a href="./html/products/product.html?id=1">See More</a></span>
             </div>
         </div>
         <div class="featured-product-container">
             <div class="featured-product-content">
                 <h2>On Sale</h2>
-                <a href="./html/products/product12.html">
+                <a href="./html/products/product.html?id=12">
                     <div class="featured-product">
                         <img src="./images/product12.png" alt="On Sale Product">
                     </div>
                 </a>
-                <span><a href="./html/products/product12.html">View Sale</a></span>
+                <span><a href="./html/products/product.html?id=12">View Sale</a></span>
             </div>
         </div>
         <div class="featured-product-container">
             <div class="featured-product-content">
                 <h2>Highest Rating</h2>
-                <a href="./html/products/product14.html">
+                <a href="./html/products/product.html?id=14">
                     <div class="featured-product">
                         <img src="./images/product14.png" alt="Highest Rated Product">
                     </div>
                 </a>
-                <span><a href="./html/products/product14.html">See More</a></span>
+                <span><a href="./html/products/product.html?id=14">See More</a></span>
             </div>
         </div>
         <div class="featured-product-container">
             <div class="featured-product-content">
                 <h2>Under $20</h2>
-                <a href="./html/products/product16.html">
+                <a href="./html/products/product.html?id=16">
                     <div class="featured-product">
                         <img src="./images/product16.png" alt="Under $20 Product">
                     </div>
                 </a>
-                <span><a href="./html/products/product16.html">Shop Under $20</a></span>
+                <span><a href="./html/products/product.html?id=16">Shop Under $20</a></span>
             </div>
         </div>
     </div>
     <div class="outer-grid-product-listings">
         <h2>Browse our full selection of products</h2>
         <div class="inner-grid-product-listings">
-            <a href="./html/products/product1.html">
+            <a href="./html/products/product.html?id=1">
                 <div class="product-listing">
                     <img src="./images/product1.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product2.html">
+            <a href="./html/products/product.html?id=2">
                 <div class="product-listing">
                     <img src="./images/product2.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product3.html">
+            <a href="./html/products/product.html?id=3">
                 <div class="product-listing">
                     <img src="./images/product3.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product4.html">
+            <a href="./html/products/product.html?id=4">
                 <div class="product-listing">
                     <img src="./images/product4.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product5.html">
+            <a href="./html/products/product.html?id=5">
                 <div class="product-listing">
                     <img src="./images/product5.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product6.html">
+            <a href="./html/products/product.html?id=6">
                 <div class="product-listing">
                     <img src="./images/product6.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product7.html">
+            <a href="./html/products/product.html?id=7">
                 <div class="product-listing">
                     <img src="./images/product7.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product8.html">
+            <a href="./html/products/product.html?id=8">
                 <div class="product-listing">
                     <img src="./images/product8.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product9.html">
+            <a href="./html/products/product.html?id=9">
                 <div class="product-listing">
                     <img src="./images/product9.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product10.html">
+            <a href="./html/products/product.html?id=10">
                 <div class="product-listing">
                     <img src="./images/product10.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product11.html">
+            <a href="./html/products/product.html?id=11">
                 <div class="product-listing">
                     <img src="./images/product11.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product12.html">
+            <a href="./html/products/product.html?id=12">
                 <div class="product-listing">
                     <img src="./images/product12.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product13.html">
+            <a href="./html/products/product.html?id=13">
                 <div class="product-listing">
                     <img src="./images/product13.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product14.html">
+            <a href="./html/products/product.html?id=14">
                 <div class="product-listing">
                     <img src="./images/product14.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product15.html">
+            <a href="./html/products/product.html?id=15">
                 <div class="product-listing">
                     <img src="./images/product15.png" alt="Product Image">
                 </div>
             </a>
-            <a href="./html/products/product16.html">
+            <a href="./html/products/product.html?id=16">
                 <div class="product-listing">
                     <img src="./images/product16.png" alt="Product Image">
                 </div>
