--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -100,7 +100,7 @@
                         <img src="../images/product1.png">
                     </div>
                     <div class="cart-item-main">
-                        <a href="./products/product1.html" style="font-size: 1.1em;">Masks (50 ct)</a>
+                        <a href="./products/product.html?id=1" style="font-size: 1.1em;">Masks (50 ct)</a>
                         <br>
                         <span style="color: #007600; font-size: 0.9em;">In Stock</span>
                         <br>
@@ -135,7 +135,7 @@
                         <img src="../images/product2.png">
                     </div>
                     <div class="cart-item-main">
-                        <a href="./products/product2.html" style="font-size: 1.1em;">Germ-X Hand Sanitizer (8 fl oz.)</a>
+                        <a href="./products/product.html?id=2" style="font-size: 1.1em;">Germ-X Hand Sanitizer (8 fl oz.)</a>
                         <br>
                         <span style="color: #b12704; font-size: 0.9em;">Only 15 left in stock - order soon.</span>
                         <br>
