Handle cart quantity changes

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -112,7 +112,7 @@
                             <br>
                             <input type="checkbox" class="cart-item-gift"><span style="font-size: 0.9em;">This is a gift </span><a href="./faq.html" style="font-size: 0.7em;">Learn more</a>
                             <br>
-                            <select name="quantity" class="cart-item-quantity">
+                            <select name="quantity" class="cart-item-quantity" onchange="handleQuantityChange(event)">
                                 <option value="0">Remove</option>
                                 <option value="1" selected>Qty: 1</option>
                                 <option value="2">Qty: 2</option>
