Change cart button to clickable text

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -87,7 +87,7 @@
         <div class="cart-container">
             <div class="cart" id="cart">
                 <h1>Shopping Cart</h1>
-                <a href="./cart.html" style="font-size: 0.9em;">Deselect all items</a>
+                <span class="clickable-text" style="font-size: 0.9em;">Deselect all items</span>
                 <div id="cart-legend-price">Price</div>
                 <hr>
                 <div id="cart-items">
