--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -97,7 +97,7 @@
                     <div class="cart-item">
                         <div class="cart-item-checkbox">
                             <div>
-                                <input class="cart-item-checkbox-input" type="checkbox" onchange="handleCheckboxChange(event)" checked>
+                                <input class="cart-item-checkbox-input" type="checkbox" onchange="handleSelectedCheckboxChange(event)" checked>
                             </div>
                         </div>
                         <div class="cart-item-image">
