Add cart delete functionality

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -120,7 +120,7 @@
                                 <option value="4">Qty: 4</option>
                                 <option value="5">Qty: 5</option>
                             </select>
-                            <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Delete</a>
+                            <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <span class="clickable-text cart-item-delete" style="font-size: 0.8em;" onclick="handleCartItemDelete(event)">Delete</span>
                             <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Save for later</a>
                             <span style="color: #d0d0d0;">&nbsp;|&nbsp;</span> <a href="./cart.html" style="font-size: 0.8em;">Compare with similar items</a>
                         </div>
