Fix grammar issue when only 1 item in cart

--- a/storefront-site/html/cart.html
+++ b/storefront-site/html/cart.html
@@ -128,7 +128,7 @@
                     </div>
                 </template>
                 <div style="width: 100%; text-align: right; font-size: 1.2em;">
-                    Subtotal (<span class="total-cart-item-quantity"></span> items): <b>$<span class="total-cart-subtotal"></span></b>
+                    Subtotal (<span class="total-cart-item-quantity"></span>): <b>$<span class="total-cart-subtotal"></span></b>
                 </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
             <div class="subtotal">
                 <span style="color: #007600; font-size: 0.9em;"><span class="material-icons">check_circle</span> Your order qualifies for FREE shipping.</span>
                 <br>
-                Subtotal (<span class="total-cart-item-quantity"></span> items): <b>$<span class="total-cart-subtotal"></span></b>
+                Subtotal (<span class="total-cart-item-quantity"></span>): <b>$<span class="total-cart-subtotal"></span></b>
                 <br>
                 <input type="checkbox" id="cart-gift" onclick="handleOrderContainsGift(event)"><span style="font-size: 0.9em;"> This order contains a gift
                 <br>
